plang/testing/logs/false-incorrect/27/program27.p.p
j :- (llNf XQ OEz99 OgTN, frZ).

ubsb :- (l9z).
uv0 :- (((p Tj fS8Kx (nIZq jh Mnw vpHCk (vm1w (PqXt) qo)) (A5d), bd)), (oeR9E B5), s (rZvji (ix N (xRJ N) U) (e mW8te (uuGbA (QUbiS) D (N)) orOu) (fY1 (iljb (vVNM1 b5u4 l7QAt (Ewu)) a) ao UM5fx (r owkJ (Ya0U7) S4t (z (p3 Em (vQ4M (xlilL) ea Uqrzd) zL1H) (sl) (S))))) K8Nh (nCH (gX3za UHH5 Z (Ibmzi) (K6)) Hxh) (yVBKc P GpEPd (fc54 t (rj) (n) (exK2 Nan jUNt IJvzJ (Z)))); jcQ (r (A7ZY)) JoS SP5 R; (l h9m)).

iZVrX (JWnt) avsPR (UnLEM).
p YJ kIQJ4 tdf :- (hEki (Ve) (t1rP zBZ W (Z)) th0V (KfA)).
bS (R) fUg.

vwPh.
wG Yg5x aR46A (lqD5 iW (Z9) zCuC) (T) :- (e2fkK (F1n) AS; ((oJ cLV (BB7)))); ua, f EhVe SuR4 (Em1y), wqHpA, vJ (NkC) K.


rQbf :- sa (ofaI (EOKXD) OJQb8 x9 e) a m (Zhq).
xts :- ez (SNShP) (QSjh) (Nb).


lT qCx On (xby (g) (Ad)) (hnG (L2) (z AoX (RU) (ZEB0) mS0) EF Z5lD) :- (c11, qyTV (S6) (yT (CxY)) BD i2; fQChg j4 (s7Ly (C) (R) (skZto (O) (APyP0) (BI8G))) fOeY0 J2, (u (F))); xW (O) KK0S (Xj) jM; zApyN (Fs) (dND5s (THS8h) (e (U) (txH fM7 (ZK3) Z6VT) (G8F) (H))), cMrc, k9yi S i, w, (riuz (u pB (eMAq) (T)) (Kj)), u o Ak (B) (j JL).
i h FW92 (T) (l (VJ) (p9ljJ Xl0) (IMd)) :- (((nC (f8u) L (fe6P4 Mcy0M (Hnr)) rKxv, umZhP (uJD) sQ (EIp) (JEJ); w3xcB))).


pXg3 (lU gj) p8QY Ia (Hha) :- wzTB (ZH) f93H; ((zp (jUKH T776s G) (BbbqM)), mxuM od zw UtOU P0g; a7J4R (IpSfC)).
pGFK (hu) (UhgL) vQMl xDoN :- ej9T, (l).


oeg :- b L9 fbZ, k aSeZK, ((pNBI), lWS).

e :- ar.

? (y6BN w3K BJyJa; w2tO z2IvG m NU, y1q (ka) (AAM) (vYkf2 (sbIHU fXqLw (S))) iR; o7FvX fv r (db1pD WCEU) b; pqg32 nt Cz4, ut, xTCo HA5 (vT (uLwA g8aT (O))) (WjOex), gj16 (T) (i lBM Xk772 (GDxz)) F; (y Z89O r9w (Vq), d (zPBP Svb) (lySOQ (lCCWm) (q (r9x (dMsb) oS) upHwB R4Tr)), aE (a8 ZyN (XO)); xQzCQ aI pZ)).



